# olyn-api

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/routes/: guides.py  health.py  itineraries.py  onboarding.py  places.py
app/core/: config.py  database.py  exceptions.py
app/domain/enums/: travel.py
app/domain/models/: __init__.py  base.py  cached_place.py  guide.py  itinerary.py  itinerary_day.py  itinerary_item.py  traveler_profile.py  user_session.py
app/domain/schemas/: guide.py  itinerary.py  onboarding.py  place.py
app/prompts/: itinerary_prompt.py
app/services/: google_places_service.py  groq_service.py  itinerary_service.py
