[project]
name = "olyn-api"
version = "0.1.0"
description = "AI-powered travel planner for Olinda, Brazil"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiohttp>=3.11.0",
    "groq>=0.13.0",
    "python-dotenv>=1.0.1",
    "httpcore>=1.0.9",
    "psycopg2-binary>=2.9.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
